<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="24dp"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity2">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@android:color/transparent"
        android:paddingBottom="24dp"
        tools:context=".ProfileActivity"
        android:visibility="gone">  </RelativeLayout>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E66A3C" app:cardCornerRadius="30dp"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/inputCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            app:cardCornerRadius="30dp"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:id="@+id/inputLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="32dp"
                android:clipToPadding="false">

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_message"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginBottom="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColorHint="#9E9E9E"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="8dp"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_example" android:textColor="#000000"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColorHint="#9E9E9E"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginBottom="4dp"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#000000"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#E66A3C"
                    android:textSize="13sp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#E66A3C"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
